--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="login-area">
-      <h1 class="text-center">Welcome To Sohel's Bank</h1>
+      <h1 class="text-center">Welcome To Sonali Bank</h1>
       <div class="submit-area">
         <h4>Login</h4>
         <input type="text" class="form-control" placeholder="Email" /> <br />
@@ -62,12 +62,13 @@
           <div class="submit-area">
             <h4>Withdraw</h4>
             <input
+              id="withdrawAmount"
               type="text"
               class="form-control"
               placeholder="$ amount you want to deposit"
             />
             <br />
-            <button class="btn btn-success">Withdraw</button>
+            <button id="addWithdraw" class="btn btn-success">Withdraw</button>
           </div>
         </div>
       </div>
@@ -89,32 +90,44 @@
       const depositBtn = document.getElementById("addDeposit");
       depositBtn.addEventListener("click", function () {
         const depositAmount = document.getElementById("depositAmount").value;
-        const depositNumber = parseFloat(depositAmount);
+        const depositNumber = getInputNumber("depositAmount");
 
-        const currentDeposit = document.getElementById("currentDeposit")
-          .innerText;
-        const currentDepositNumber = parseFloat(currentDeposit);
-        const totalDeposit = depositNumber + currentDepositNumber;
-        document.getElementById("currentDeposit").innerText = totalDeposit;
+        // const currentDeposit = document.getElementById("currentDeposit")
+        //   .innerText;
+        // const currentDepositNumber = parseFloat(currentDeposit);
+        // const totalDeposit = depositNumber + currentDepositNumber;
+        // document.getElementById("currentDeposit").innerText = totalDeposit;
+
+        // const currentBalance = document.getElementById("currentBalance").innerText;
+        // const currentBalanceNumber = parseFloat(currentBalance);
+        // const totalBalance = depositNumber + currentBalanceNumber;
+        // document.getElementById("currentBalance").innerText = totalBalance;
+        updateSpanText("currentDeposit", depositNumber);
+        updateSpanText("currentBalance", depositNumber);
 
         document.getElementById("depositAmount").value = "";
+      });
 
-        // updateSpanText("currentBalance");
+      //withdraw button event handler
 
-        const currentBalance = document.getElementById("currentBalance").innerText;
+      const withdrawBtn = document.getElementsByClassName("addWithdraw");
+      withdrawBtn.addEventListener("click", function () {
+        const withdrawAmount = document.getElementById("withdrawAmount").value;
+        const withdrawNumber = parseFloat(withdrawAmount);
+      });
+
+      function getInputNumber(id) {
+        const amount = document.getElementById(id).value;
+        const amountNumber = parseFloat(amount);
+        return amountNumber;
+      }
+
+      function updateSpanText(id, depositNumber) {
+        const currentBalance = document.getElementById(id).innerText;
         const currentBalanceNumber = parseFloat(currentBalance);
         const totalBalance = depositNumber + currentBalanceNumber;
-        document.getElementById("currentBalance").innerText = totalBalance;
-
-        // document.getElementById("depositAmount"). value = "";
-      });
-      // function updateSpanText(id){
-      //   const currentBalance = document.getElementById(id).innerText;
-      //   const currentBalanceNumber = parseFloat(currentBalance);
-      //   const totalBalance = depositNumber + currentBalanceNumber;
-      //   document.getElementById(id).innerText = totalBalance;
-
-      // }
+        document.getElementById(id).innerText = totalBalance;
+      }
     </script>
   </body>
 </html>
